# there-can-only-be-one

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: dedupe.rs  lib.rs  main.rs  output.rs  platform.rs
tests/: dedupe.rs  output.rs
