[package]
name = "there-can-only-be-one"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
globset = "0.4.18"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
